<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Name EditText -->
    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/name_hint"
        android:inputType="text"/>

    <!-- TOPPINGS TextView -->
    <TextView
        android:id="@+id/toppings_check_box"
        style="@style/CustomHeaderText"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/toppings"/>

    <!-- TOPPINGS CheckBox -->
    <!-- Whipped cream CheckBox -->
    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:paddingLeft="24dp"
        android:text="@string/whipped_cream"
        android:textSize="16sp" />

    <!-- Chocolate CheckBox -->
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:paddingLeft="24dp"
        android:text="@string/chocolate"
        android:textSize="16sp" />

    <!-- QUANTITY TextView -->
    <TextView
        android:id="@+id/quantityTextView"
        style="@style/CustomHeaderText"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantity" />

    <!-- LinearLayout for CoffeeCounter -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- The - Button -->
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="decrement"
            android:text="-"
            style="@style/ButtonsStyle"/>

        <!-- CoffeeCounter TextView -->
        <TextView
            android:id="@+id/quantityTextViewCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/initial_quantity"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- The + Button -->
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@+id/incrementButton"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:onClick="increment"
            android:text="+"
            style="@style/ButtonsStyle" />

    </LinearLayout>


    <!-- ORDER Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantityTextView1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order_button"
        style="@style/ButtonsStyle" />


</LinearLayout>